--- a/war/css/cgh.css
+++ b/war/css/cgh.css
@@ -29,11 +29,11 @@ hr {display:block; height:1px; margin:10px 0; padding:0; border:0 solid #CCC; ba
 		#logo h1 span {display:block; position:absolute; left:0; top:0; z-index:1; width:350px; height:110px; background:url("../images/logo.png") 0 0 no-repeat; cursor:pointer;}
      
 
-#contact {width:409px; height:26px; margin-left: 450px; margin-top: 40px; font-size: 140%; color: #4aa0e0;}
+#contact {text-align:right; width:409px; height:26px; margin-left: 450px; margin-top: 40px; font-size: 140%; color:#4aa0e0;}
 
 
-ul {margin:0; padding:0; list-style:none;}
-ul li {margin:0; padding:4px; padding-top:10px;  padding-left:42px; background:url("../images/arrow.png") 0 5px no-repeat; font-size: 120%;}
+ul {margin:0; padding:20px; list-style:none;}
+ul li {margin:0; padding:4px; padding-top:10px;  padding-left:20px; list-style-type: circle; font-size: 120%; color:#4aa0e0 }
 
 .clients {padding-right: 29px; padding-top: 5px; float: left;}
 
