--- a/war/css/cgh.css
+++ b/war/css/cgh.css
@@ -1,13 +1,23 @@
-body,div,span,p,a,img,ul,ol,li,table,th,tr,td,form,fieldset,legend,dl,dt,dd,blockquote,applet,object
-	{
+body,div,span,p,a,img,ul,ol,li {
 	border: 0;
 }
+
+@font-face {
+    font-family: 'DejaVuSansBook';
+    src: url('/font/DejaVuSans-webfont.eot');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 body {
 	padding: 5px 0;
 	background: white;
-	font: 0.75em/ 1.5 "arial", sans-serif;
+	font: 0.75em/ 1.5 "DejaVuSansBook", sans-serif;
 	color: #000;
+	background: #F7F7F7 url(/images/bg_texture.png) repeat scroll 0px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 5px ;
+    border-bottom: 1px solid #b3b3b3;
 	text-align: center;
 }
 
@@ -53,51 +63,6 @@ p {
 	margin: 15px 0;
 }
 
-table {
-	margin: 15px 0;
-	border-collapse: collapse;
-	border-spacing: 0;
-	font-size: 100%;
-}
-
-th {
-	text-align: center;
-	font-weight: bold;
-}
-
-th,td {
-	padding: 3px 5px;
-}
-
-tr {
-	border: 1px;
-	border-width: 1px;
-	border-color: gray;
-	border-style: solid;
-	text-align: center;
-	padding: 6px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 85%;
-}
-
-td {
-	border-width: 1px;
-	border-color: #CCCCCC;
-	border-style: solid;
-	text-align: center;
-	padding: 5px;
-}
-
-hr {
-	display: block;
-	height: 1px;
-	margin: 10px 0;
-	padding: 0;
-	border: 0 solid #CCC;
-	background: #CCC;
-	color: #CCC;
-}
-
 .main {
 	width: 870px;
 	margin: auto;
@@ -108,6 +73,7 @@ hr {
 	position: absolute;
 	top: 30px;
 	margin-left: -15px;
+	font-family: DejaVuSansBook, Sans-Serif;
 }
 
 #logo h1 {
@@ -117,22 +83,11 @@ hr {
 	height: 110px;
 	margin: 0;
 	padding: 0;
+	font-family: DejaVuSansBook, Sans-Serif;
 }
 
 #logo h1 a {
 	color: black;
-}
-
-#logo h1 span {
-	display: block;
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 1;
-	width: 350px;
-	height: 110px;
-	background: url("../images/logo.png") 0 0 no-repeat;
-	cursor: pointer;
 }
 
 #contact {
@@ -167,60 +122,41 @@ ul li {
 	float: left;
 }
 
-.stred {
-	padding: 4px;
-	padding-top: 10px;
-	padding-left: 42px;
-	background: url("../images/arrow.png") 150px 5px no-repeat;
-	font-size: 120%;
-	text-align: center;
-	margin-left: 170px;
+
+
+<!-- Footer stuff -->
+
+#footer-content {
+    width: 100%;
+    height: 0px;
+    background: #251b15;
+    color: #CCCCCC;
+    font-size: 0.8em;
+    border: none;
+    font-family: DejaVuSansBook, Sans-Serif;
 }
 
-.posundiv {
-	padding-left: 12px;
-	margin-top: 90px;
+#footerSlideContent {
+    width: 100%;
+    height: 0px;
+    background: #F7F7F7 url(/images/footer.png) repeat scroll 0px 0px;
+    color: #CCCCCC;
+    font-size: 0.8em;
+    border: none;
+    font-family: DejaVuSansBook, Sans-Serif;
 }
 
-.one {
-	height: 42px;
-	background: url("../images/one.gif") 1px 1px no-repeat;
-	padding-top: 10px;
-	padding-left: 50px;
-	float: left;
-}
 
-.two {
-	width: 150px;
-	margin-left: 15px;
-	height: 42px;
-	background: url("../images/two.gif") 1px 1px no-repeat;
-	padding-top: 10px;
-	padding-left: 50px;
-	float: left;
-}
-
-.three {
-	margin-left: 280px;
-	height: 42px;
-	background: url("../images/three.gif") 1px 1px no-repeat;
-	padding-top: 10px;
-	padding-left: 50px;
-}
-
-.footer {
-    bottom: 0px;
-	position: fixed;
-	width: 100%;
-	height: 19px;
-	background: white;
-	clear: left;
-	padding-top: 27px;
-	text-align: center;
-	color: black;
-	padding-bottom: 30px;
+#footer-container {
+    position: fixed;
+    bottom:0;
+    width: 100%;
 }
 
 .footer a {
 	color: black
+}
+
+#legal {
+   display: none;
 }
